# SplatDemo

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
lib/windows/irrKlang/: irrKlangConfig.cmake
src/: Camera.cpp  Camera.h  Floor.cpp  GameLogic.cpp  GameWindow.cpp  Music.cpp  PhysicalEngine.cpp  Player.cpp  Player.h  PlayerView.cpp  Renderer.cpp  Shaders.cpp  Shadow.cpp  SkyBox.cpp  Sphere.cpp  Sphere.h  floor.cpp  floor.h  glad.c  main.cpp  skyBox.h  skybox.cpp
src/include/: Camera.h  Floor.h  GameLogic.h  GameWindow.h  Music.h  PhysicalEngine.h  Player.h  PlayerView.h  Renderer.h  Shaders.h  Shadow.h  SkyBox.h  defineList.h  floor.h  skyBox.h
src/shaders/: floorFS.glsl  floorVS.glsl  fragmentShader.glsl  playerFS.glsl  playerVS.glsl  shadowFS.glsl  skyBoxFS.glsl  skyBoxVS.glsl  sunFragmentShader.glsl  sunVertexShader.glsl  vertexShader.glsl
